--- a/.config/dein/plugins.toml
+++ b/.config/dein/plugins.toml
@@ -15,69 +15,15 @@ repo = 'Shougo/context_filetype.vim'
 repo = 'vim-jp/vital.vim'
 
 # }}}
+# 機能拡張 {{{
 
 [[plugins]] # ファイルタイプ自動切り替え
 repo = 'osyo-manga/vim-precious'
-depends = ['context_filetype.vim']
-
-# 補完 {{{
-
-[[plugins]]
-repo = 'Shougo/deoplete.nvim'
-if = 'has("nvim")'
-depends = ['context_filetype.vim']
-on_i = 1
-hook_add = '''
-	let g:deoplete#enable_at_startup = 1
-'''
-hook_source = '''
-	let g:deoplete#enable_smart_case = 1
-	set completeopt-=noselect
-
-	" <TAB>: completion.
-	imap <silent><expr> <TAB> pumvisible() ? "\<C-n>" : <SID>check_back_space() ? "\<TAB>" : deoplete#mappings#manual_complete()
-	function! s:check_back_space() abort
-		let col = col('.') - 1
-		return !col || getline('.')[col - 1]  =~ '\s'
-	endfunction
-
-	" <S-TAB>: completion back.
-	inoremap <expr><S-TAB>  pumvisible() ? "\<C-p>" : "\<C-h>"
-'''
-
-# }}}
-# NERDTree {{{
-
-[[plugins]]
-repo = 'scrooloose/nerdtree'
-hook_add = '''
-	" 不可視ファイルを表示する
-	let g:NERDTreeShowHidden = 1
-	" 除外対象指定
-	let g:NERDTreeIgnore = ['.git$','.(tgz|gz|zip)$']
-	" ブックマークを初期表示
-	let g:NERDTreeShowBookmarks = 1
-'''
-
-[[plugins]]
-repo = 'Xuyuanp/nerdtree-git-plugin'
-deoplete = ['nerdtree']
-
-[[plugins]]
-repo = 'jistr/vim-nerdtree-tabs'
-deoplete = ['nerdtree']
-hook_add = '''
-	" ファイルが指定されていなければNERD treeを有効にする
-	if argc() == 0
-		let g:nerdtree_tabs_open_on_console_startup = 1
-	end
-'''
-
-# }}}
+depends = 'context_filetype.vim'
 
 [[plugins]] # Auto Close (括弧)
 repo = 'jiangmiao/auto-pairs'
-on_i = 1
+on_event = 'InsertEnter'
 hook_post_source = 'call AutoPairsTryInit()'
 
 [[plugins]] # Auto save
@@ -99,14 +45,6 @@ hook_source = '''
 	let g:gitgutter_sign_removed = '✘'
 '''
 
-[[plugins]] # Status line
-repo = 'itchyny/lightline.vim'
-on_event = ['VimEnter']
-hook_source = '''
-	let g:lightline = {'colorscheme': 'wombat'}
-'''
-hook_post_source = 'call lightline#colorscheme()'
-
 [[plugins]] # EditorConfig
 repo = 'editorconfig/editorconfig-vim'
 on_path = '.*'
@@ -116,13 +54,70 @@ repo = 'tpope/vim-surround'
 
 [[plugins]] # Emmet
 repo = 'mattn/emmet-vim'
-on_i = 1
+on_event = 'InsertEnter'
 hook_source = '''
 	let g:user_emmet_mode = 'i'
 	let g:user_emmet_leader_key = '<C-E>'
 	let g:use_emmet_complete_tag = 1
 	let g:user_emmet_settings = {'variables':{'lang':"ja"}}
 '''
+
+# Status line {{{
+
+[[plugins]]
+repo = 'itchyny/lightline.vim'
+hook_add = '''
+	let g:lightline = {}
+	let g:lightline.colorscheme = 'hybrid'
+
+	" let g:lightline.active = {}
+	" let g:lightline.active.lest = [['mode', 'paste'], ['readonly', 'filename', 'modified']]
+	" let g:lightline.active.right = [['lineinfo'], ['percent'], ['fileformat', 'fileencoding', 'filetype']]
+
+	let g:lightline.inactive = {}
+	let g:lightline.inactive.left = [['filename']]
+	let g:lightline.inactive.right = [['lineinfo'], ['percent']]
+
+'''
+
+[[plugins]]
+repo = 'cocopon/lightline-hybrid.vim'
+depends = 'lightline.vim'
+
+# }}}
+# NERD Tree {{{
+
+[[plugins]]
+repo = 'scrooloose/nerdtree'
+hook_add = '''
+	" 不可視ファイルを表示する
+	let g:NERDTreeShowHidden = 1
+	" 除外対象指定
+	let g:NERDTreeIgnore = ['.git$', '.(tgz|gz|zip)$']
+	" ブックマークを初期表示
+	let g:NERDTreeShowBookmarks = 1
+
+	let s:cache_home = empty($XDG_CACHE_HOME) ? expand('$HOME/.cache') : $XDG_CACHE_HOME
+	let s:nerdtree_dir = s:cache_home . '/vim-NERDTree'
+	let g:NERDTreeBookmarksFile = s:nerdtree_dir . '/Bookmarks'
+'''
+
+[[plugins]]
+repo = 'Xuyuanp/nerdtree-git-plugin'
+deoplete = 'nerdtree'
+
+[[plugins]]
+repo = 'jistr/vim-nerdtree-tabs'
+deoplete = 'nerdtree'
+hook_add = '''
+	" ファイルが指定されていなければNERD treeを有効にする
+	if argc() == 0
+		let g:nerdtree_tabs_open_on_console_startup = 1
+	end
+'''
+
+# }}}
+# Open Browser {{{
 
 [[plugins]]
 repo = 'tyru/open-browser.vim'
@@ -132,102 +127,55 @@ hook_add = '''
 
 [[plugins]]
 repo = 'tyru/open-browser-github.vim'
-depends = ['open-browser.vim']
-on_cmd = ['OpenGithubFile','OpenGithubIssue','OpenGithubPullReq']
+depends = 'open-browser.vim'
+on_cmd = ['OpenGithubFile', 'OpenGithubIssue', 'OpenGithubPullReq']
 hook_add = '''
 	nnoremap go :<C-u>OpenGithubFile<CR>
 	xnoremap go :OpenGithubFile<CR>
 '''
 
-# Lang {{{
-## Golang {{{
+# }}}
+# Command {{{
 
-[[plugins]]
+[[plugins]] # dein.vim command
+repo = 'haya14busa/dein-command.vim'
+depends = 'dein.vim'
+on_cmd = 'Dein'
+
+[[plugins]] # Git
+repo = 'cohama/agit.vim'
+on_cmd = ['Agit', 'AgitFile']
+
+[[plugins]] # Gist
+repo = 'lambdalisue/vim-gista'
+on_cmd = 'Gista'
+
+[[plugins]] # Preview
+repo = 'kannokanno/previm'
+depends = 'open-browser.vim'
+on_cmd = 'PrevimOpen'
+
+[[plugins]] # Codic
+repo = 'yasuharu519/vim-codic'
+if = 'exists("$CODIC_ACCESS_TOKEN")'
+on_cmd = 'VimCodic'
+hook_source = '''
+	let g:vim_codic_access_token = $CODIC_ACCESS_TOKEN
+'''
+
+# }}}
+# Lang {{{
+
+[[plugins]] # Golang
 repo = 'fatih/vim-go'
 if = 'executable("go")'
-on_ft = ['go']
+on_ft = 'go'
 hook_source = '''
 	let g:go_fmt_command = 'goimports'
 '''
 
-[[plugins]]
-repo = 'zchee/deoplete-go'
-depends = ['deoplete.nvim']
-on_ft = ['go']
-build = 'make'
-hook_source = '''
-	let g:deoplete#sources#go#use_cache = 1
-	let g:deoplete#sources#go#gocode_binary = $GOPATH . '/bin/gocode'
-	let g:deoplete#sources#go#sort_class = ['package', 'func', 'type', 'var', 'const']
-'''
-
-## }}}
-## HTML {{{
-
-[[plugins]] # Haml
-repo  = 'tpope/vim-haml'
-
-[[plugins]] # Html5
-repo  = 'othree/html5.vim'
-
-## }}}
-## css {{{
-
-[[plugins]] # css3
-repo = 'hail2u/vim-css3-syntax'
-
-## }}}
-## JavaScript {{{
-
-[[plugins]]
-repo = 'kchmck/vim-coffee-script'
-on_ft = ['coffee']
-
-[[plugins]] # TypeScript
-repo = 'leafgarland/typescript-vim'
-on_ft = ['typescript']
-
-## }}}
-## Markdown {{{
-
-[[plugins]]
+[[plugins]] # Markdown
 repo = 'rhysd/vim-gfm-syntax'
-
-[[plugins]] # Preview
-repo = 'kannokanno/previm'
-depends = ['open-browser.vim']
-on_cmd = ['PrevimOpen']
-
-## }}}
-## Vim {{{
-
-[[plugins]]
-repo = 'vim-jp/syntax-vim-ex'
-on_ft = ['vim']
-
-[[plugins]]
-repo = 'Shougo/neco-vim'
-depends = ['deoplete.nvim']
-on_ft = ['vim']
-
-[[plugins]] # Japanese doc
-repo = 'vim-jp/vimdoc-ja'
-
-## }}}
-## ZSH {{{
-
-[[plugins]] # Zsh - 補完
-repo = 'zchee/deoplete-zsh'
-depends = ['deoplete.nvim']
-
-[[plugins]]
-repo = 'zplug/vim-zplug'
-
-## }}}
-
-
-[[plugins]] # amber
-repo = 'burner/amber.vim'
 
 [[plugins]] # TMUX
 repo = 'tmux-plugins/vim-tmux'
@@ -235,45 +183,51 @@ repo = 'tmux-plugins/vim-tmux'
 [[plugins]] # Toml
 repo  = 'cespare/vim-toml'
 
-# }}}
-# Command {{{
+[[plugins]] # zsh - zplug
+repo = 'zplug/vim-zplug'
 
-[[plugins]] # dein.vim command
-repo = 'haya14busa/dein-command.vim'
-depends = ['dein.vim']
-on_cmd = ['Dein']
 
-[[plugins]] # Git
-repo = 'cohama/agit.vim'
-on_cmd = ['Agit','AgitFile']
+## Web系 {{{
 
-[[plugins]] # Gist
-repo = 'lambdalisue/vim-gista'
-on_cmd = ['Gista']
+[[plugins]] # amber
+repo = 'burner/amber.vim'
 
-[[plugins]] # Codic
-repo = 'yasuharu519/vim-codic'
-if = 'exists("$CODIC_ACCESS_TOKEN")'
-on_cmd = ['VimCodic']
-hook_source = '''
-	let g:vim_codic_access_token = $CODIC_ACCESS_TOKEN
+[[plugins]] # CoffeeScript
+repo = 'kchmck/vim-coffee-script'
+
+[[plugins]] # css3
+repo = 'hail2u/vim-css3-syntax'
+
+[[plugins]] # Haml
+repo  = 'tpope/vim-haml'
+
+[[plugins]] # Html5
+repo  = 'othree/html5.vim'
+
+[[plugins]] # JavaScript
+repo = 'jelera/vim-javascript-syntax'
+
+[[plugins]] # TypeScript
+repo = 'leafgarland/typescript-vim'
+
+## }}}
+## Vim {{{
+
+[[plugins]] # Vim
+repo = 'vim-jp/syntax-vim-ex'
+on_ft = 'vim'
+
+[[plugins]] # Japanese doc
+repo = 'vim-jp/vimdoc-ja'
+hook_add = '''
+	set helplang=ja,en
 '''
 
+## }}}
 # }}}
 # Colors {{{
 
 [[plugins]] # hybrid
 repo = 'w0ng/vim-hybrid'
-hook_add = '''
-	" let g:hybrid_custom_term_colors = 1
-	" let g:hybrid_reduced_contrast = 1
-'''
-
-# }}}
-# Test {{{
-
-[[plugins]]
-repo = 'Shougo/denite.nvim'
-if = 'has("nvim")'
 
 # }}}
