--- a/.config/dein/nvim.toml
+++ b/.config/dein/nvim.toml
@@ -6,16 +6,10 @@ repo = 'Shougo/denite.nvim'
 [[plugins]]
 repo = 'Shougo/deoplete.nvim'
 depends = 'context_filetype.vim'
-on_event = 'InsertEnter'
+on_event = ['InsertEnter']
 hook_add = '''
-	let g:deoplete#enable_at_startup = 1
-	let g:deoplete#enable_smart_case = 1
-
-	" set completeopt-=preview " プレビューウィンドウを開かないようにする
-
 	" <TAB>: completion.
 	imap <silent><expr> <TAB> pumvisible() ? "\<C-n>" : <SID>check_back_space() ? "\<TAB>" : deoplete#mappings#manual_complete()
-
 	function! s:check_back_space() abort
 		let col = col('.') - 1
 		return !col || getline('.')[col - 1]  =~ '\s'
@@ -23,6 +17,10 @@ hook_add = '''
 
 	" <S-TAB>: completion back.
 	inoremap <expr><S-TAB>  pumvisible() ? "\<C-p>" : "\<C-h>"
+'''
+hook_source = '''
+	let g:deoplete#enable_at_startup = 1
+	let g:deoplete#enable_smart_case = 1
 '''
 
 [[plugins]] # Golang
