--- a/.config/dein/plugins.toml
+++ b/.config/dein/plugins.toml
@@ -113,7 +113,7 @@ hook_add = '''
 	let g:NERDTreeShowBookmarks = 1
 
 	let s:cache_home = empty($XDG_CACHE_HOME) ? expand('$HOME/.cache') : $XDG_CACHE_HOME
-	let s:nerdtree_dir = s:cache_home . '/vim-NERDTree'
+	let s:nerdtree_dir = s:cache_home . '/nerdtree'
 	let g:NERDTreeBookmarksFile = s:nerdtree_dir . '/Bookmarks'
 '''
 
