--- a/.config/dein/plugins.toml
+++ b/.config/dein/plugins.toml
@@ -183,6 +183,7 @@ hook_source = '''
 repo = 'fatih/vim-go'
 if = 'executable("go")'
 on_ft = 'go'
+on_cmd = ['GoInstallBinaries', 'GoUpdateBinaries']
 hook_source = '''
 	let g:go_fmt_command = 'goimports'
 '''
