:+1: プラグイン追加

--- a/.config/dein/plugins.toml
+++ b/.config/dein/plugins.toml
@@ -179,6 +179,9 @@ hook_source = '''
 # }}}
 # Lang {{{
 
+[[plugins]] # Docker
+repo = 'ekalinin/Dockerfile.vim'
+
 [[plugins]] # Golang
 repo = 'fatih/vim-go'
 if = 'executable("go")'
