--- a/.config/dein/nvim.toml
+++ b/.config/dein/nvim.toml
@@ -2,9 +2,28 @@
 
 [[plugins]]
 repo = 'Shougo/denite.nvim'
+on_cmd = 'Denite'
+hook_post_source = '''
+	if executable('pt')
+		call denite#custom#var('file_rec', 'command', ['pt', '--follow', '--nocolor', '--nogroup', '--hidden', '-g', ''])
+		call denite#custom#var('grep', 'command', ['pt', '--nogroup', '--nocolor', '--smart-case', '--hidden'])
+		call denite#custom#var('grep', 'default_opts', [])
+		call denite#custom#var('grep', 'recursive_opts', [])
+	endif
+	call denite#custom#source('file_rec', 'matcher', ['matcher_cpsm', 'matcher_fuzzy'])
+'''
+
+[[plugins]]
+repo = 'nixprime/cpsm'
+build = 'env PY3=ON ./install.sh'
+hook_source = 'denite.nvim'
 
 [[plugins]]
 repo = 'Shougo/neomru.vim'
+depends = 'denite.nvim'
+
+[[plugins]]
+repo = 'Shougo/neoyank.vim'
 depends = 'denite.nvim'
 
 # }}}
@@ -31,6 +50,11 @@ hook_source = '''
 	let g:deoplete#enable_smart_case = 1
 '''
 hook_post_source = 'call deoplete#enable()'
+
+[[plugins]] # Docker
+repo = 'zchee/deoplete-docker'
+depends = 'deoplete.nvim'
+on_ft = 'Dockerfile'
 
 [[plugins]] # Golang
 repo = 'zchee/deoplete-go'
