:+1: ignore の追加と smart-case の説明追加

--- a/.config/pt/config.toml
+++ b/.config/pt/config.toml
@@ -2,7 +2,7 @@
 hidden = true
 
 # 無視するファイル
-ignore = [".git"]
+ignore = ['.git', 'node_modules']
 
-# 不明
+# # Match case insensitively unless PATTERN contains uppercase characters
 smart-case = true
