--- a/.config/dein/neovim.toml
+++ b/.config/dein/neovim.toml
@@ -11,14 +11,7 @@ hook_post_source = '''
 		call denite#custom#var('grep', 'default_opts', [])
 		call denite#custom#var('grep', 'recursive_opts', [])
 	endif
-	call denite#custom#source('file_rec', 'matcher', ['matcher_cpsm', 'matcher_fuzzy'])
 '''
-
-[[plugins]]
-repo = 'nixprime/cpsm'
-if = 'has("python3")'
-build = 'env PY3=ON ./install.sh'
-hook_source = 'denite.nvim'
 
 [[plugins]]
 repo = 'Shougo/neomru.vim'
@@ -37,6 +30,10 @@ if = 'has("python3")'
 depends = 'context_filetype.vim'
 on_event = 'InsertEnter'
 hook_add = '''
+	" 補完の表示オプション? TODO: 後で調べる
+	set completeopt+=noinsert
+	set completeopt+=noselect
+
 	function! s:check_back_space() abort
 		let col = col('.') - 1
 		return !col || getline('.')[col - 1]  =~ '\s'
