:+1: Tig で今見ているコミットをブラウザで開く機能追加
http://blog.kyanny.me/entry/2012/07/22/033134 を参考に

--- a/.config/tig/config
+++ b/.config/tig/config
@@ -20,4 +20,9 @@ color diff-chunk magenta default
 color "Reported-by:" green default
 color graph-commit cyan default
 
+# open commit at github
+bind main o !@hub browse -- commit/%(commit)
+bind diff o !@hub browse -- commit/%(commit)
+bind log  o !@hub browse -- commit/%(commit)
+
 # vim: ft=config
