--- a/.config/dein/plugins.toml
+++ b/.config/dein/plugins.toml
@@ -49,6 +49,7 @@ on_path = '.*'
 
 [[plugins]] # 選択範囲を記号やタグで囲んだり外したりできる
 repo = 'tpope/vim-surround'
+on_path = '.*'
 
 [[plugins]] # Emmet
 repo = 'mattn/emmet-vim'
@@ -65,6 +66,8 @@ hook_source = '''
 [[plugins]]
 repo = 'itchyny/lightline.vim'
 hook_add = '''
+	" TODO: 整理&最適化
+
 	let g:lightline = {}
 	let g:lightline.colorscheme = 'hybrid'
 
@@ -129,7 +132,8 @@ deoplete = 'nerdtree'
 [[plugins]]
 repo = 'jistr/vim-nerdtree-tabs'
 deoplete = 'nerdtree'
-on_cmd = ['NERDTreeTabsOpen', 'NERDTreeTabsClose', 'NERDTreeTabsToggle', 'NERDTreeMirrorOpen', 'NERDTreeMirrorToggle']
+# TODO: 起動しなくなるのでやり方を調べてみる
+# on_cmd = ['NERDTreeTabsOpen', 'NERDTreeTabsClose', 'NERDTreeTabsToggle', 'NERDTreeMirrorOpen', 'NERDTreeMirrorToggle']
 hook_add = '''
 	nnoremap <silent> tf :NERDTreeMirrorToggle<CR>
 '''
@@ -174,7 +178,7 @@ on_cmd = 'Gista'
 [[plugins]] # Preview
 repo = 'kannokanno/previm'
 depends = 'open-browser.vim'
-on_cmd = 'PrevimOpen'
+on_ft = 'markdown'
 
 [[plugins]] # Codic
 repo = 'yasuharu519/vim-codic'
@@ -193,8 +197,8 @@ repo = 'ekalinin/Dockerfile.vim'
 [[plugins]] # Golang
 repo = 'fatih/vim-go'
 if = 'executable("go")'
-on_ft = 'go'
 on_cmd = ['GoInstallBinaries', 'GoUpdateBinaries']
+on_ft = 'go'
 hook_source = '''
 	let g:go_fmt_command = 'goimports'
 '''
