--- a/.config/dein/plugins.toml
+++ b/.config/dein/plugins.toml
@@ -203,7 +203,7 @@ hook_source = '''
 	let g:go_fmt_command = 'goimports'
 '''
 
-[[plugins]] # Markdown
+[[plugins]] # Markdown (GitHub Flavored Markdown)
 repo = 'rhysd/vim-gfm-syntax'
 
 [[plugins]] # npm
