:+1: 変更のdiffを見ながらコミットメッセージを書く
https://r9.ms/2dW6Plm

--- a/.config/git/config
+++ b/.config/git/config
@@ -25,6 +25,7 @@
 [commit]
 	template = ~/.config/git/message.txt
 	gpgsign = true
+	verbose = true
 [diff]
 	algorithm = histogram
 	compactionHeuristic = true
