--- a/.config/dein/plugins.toml
+++ b/.config/dein/plugins.toml
@@ -10,16 +10,14 @@ repo = 'Shougo/context_filetype.vim'
 repo = 'vim-jp/vital.vim'
 
 # }}}
-# 機能拡張 {{{
+# Automatic {{{
 
-[[plugins]] # ファイルタイプ自動切り替え
+[[plugins]] # ファイルタイプ切り替え
 repo = 'osyo-manga/vim-precious'
 depends = 'context_filetype.vim'
-on_path = '.*'
 
 [[plugins]] # Auto Close (括弧)
 repo = 'jiangmiao/auto-pairs'
-on_event = 'InsertEnter'
 hook_add = '''
 	" キーマップを無効にする
 	let g:AutoPairsShortcutToggle = ''
@@ -27,7 +25,6 @@ hook_add = '''
 	let g:AutoPairsShortcutJump = ''
 	let g:AutoPairsShortcutBackInsert = ''
 '''
-hook_post_source = 'call AutoPairsTryInit()'
 
 [[plugins]] # Auto save
 repo ='907th/vim-auto-save'
@@ -38,6 +35,15 @@ hook_source = '''
 	let g:auto_save_silent = 1          " メッセージを表示しない
 '''
 hook_post_source = 'call AutoSave()'
+
+# }}}
+# View {{{
+
+[[plugins]] # 行番号表示
+repo = 'jeffkreeftmeijer/vim-numbertoggle'
+hook_add = '''
+	let g:NumberToggleTrigger="<F2>"
+'''
 
 [[plugins]] # 対応括弧をハイライト
 repo = 'itchyny/vim-parenmatch'
@@ -51,9 +57,31 @@ hook_add = '''
 	let g:gitgutter_map_keys = 0
 '''
 
-[[plugins]] # j/k によう移動を早くする
+## Status line {{{
+
+[[plugins]]
+repo = 'itchyny/lightline.vim'
+hook_add = '''
+	let g:lightline = {
+	\	'colorscheme': 'hybrid',
+	\	'inactive': {
+	\		'left': [['filename']],
+	\		'right':  [['lineinfo'], ['percent']]
+	\	}
+	\}
+'''
+
+[[plugins]]
+repo = 'cocopon/lightline-hybrid.vim'
+depends = 'lightline.vim'
+
+## }}}
+# }}}
+# 機能拡張 {{{
+
+[[plugins]] # j/k による移動を早くする
 repo = 'rhysd/accelerated-jk'
-on_map = '<Plug>(accelerated_jk_g'
+on_map = '<Plug>(accelerated'
 hook_add = '''
 	nmap j <Plug>(accelerated_jk_gj)
 	nmap k <Plug>(accelerated_jk_gk)
@@ -74,42 +102,27 @@ hook_add = '''
 [[plugins]] # EditorConfig
 repo = 'editorconfig/editorconfig-vim'
 on_path = '.*'
+hook_source = '''
+	if executable('editorconfig')
+		let g:EditorConfig_core_mode = 'external_command'
+		if has('mac')
+			let g:EditorConfig_exec_path = '/usr/local/bin/editorconfig'
+		endif
+	endif
+'''
 
 [[plugins]] # Emmet
 repo = 'mattn/emmet-vim'
-on_event = 'InsertEnter'
+on_cmd = 'Emmet'
+on_ft = ['html', 'haml', 'css', 'sass', 'scss']
 hook_source = '''
-	let g:user_emmet_mode = 'i'
-	let g:user_emmet_leader_key = '<C-E>'
-	let g:use_emmet_complete_tag = 1
-	let g:user_emmet_settings = {'variables':{'lang':"ja"}}
+	let g:user_emmet_settings = {
+	\	'variables': {
+	\		'lang': "ja"
+	\	}
+	\}
 '''
 
-## Status line {{{
-
-[[plugins]]
-repo = 'itchyny/lightline.vim'
-hook_add = '''
-	" TODO: 整理&最適化
-
-	let g:lightline = {}
-	let g:lightline.colorscheme = 'hybrid'
-
-	" let g:lightline.active = {}
-	" let g:lightline.active.lest = [['mode', 'paste'], ['readonly', 'filename', 'modified']]
-	" let g:lightline.active.right = [['lineinfo'], ['percent'], ['fileformat', 'fileencoding', 'filetype']]
-
-	let g:lightline.inactive = {}
-	let g:lightline.inactive.left = [['filename']]
-	let g:lightline.inactive.right = [['lineinfo'], ['percent']]
-
-'''
-
-[[plugins]]
-repo = 'cocopon/lightline-hybrid.vim'
-depends = 'lightline.vim'
-
-## }}}
 ## search {{{
 
 [[plugins]]
@@ -144,11 +157,15 @@ repo = 'scrooloose/nerdtree'
 hook_add = '''
 	" 不可視ファイルを表示する
 	let g:NERDTreeShowHidden = 1
+
 	" 除外対象指定
 	let g:NERDTreeIgnore = ['.git$', '.(tgz|gz|zip)$']
-	" ブックマークを初期表示
-	let g:NERDTreeShowBookmarks = 1
+	if has('mac')
+		call add(g:NERDTreeIgnore, '.DS_Store')
+	endif
 
+	" ブックマーク
+	let g:NERDTreeShowBookmarks = 1
 	let s:cache_home = empty($XDG_CACHE_HOME) ? expand('$HOME/.cache') : $XDG_CACHE_HOME
 	let s:nerdtree_dir = s:cache_home . '/nerdtree'
 	let g:NERDTreeBookmarksFile = s:nerdtree_dir . '/Bookmarks'
@@ -156,15 +173,14 @@ hook_add = '''
 
 [[plugins]]
 repo = 'Xuyuanp/nerdtree-git-plugin'
+if = 'executable("git")'
 deoplete = 'nerdtree'
 
 [[plugins]]
 repo = 'jistr/vim-nerdtree-tabs'
 deoplete = 'nerdtree'
-# TODO: 起動しなくなるのでやり方を調べてみる
-# on_cmd = ['NERDTreeTabsOpen', 'NERDTreeTabsClose', 'NERDTreeTabsToggle', 'NERDTreeMirrorOpen', 'NERDTreeMirrorToggle']
 hook_add = '''
-	nnoremap <silent> tf :NERDTreeMirrorToggle<CR>
+	nmap tf <plug>NERDTreeTabsToggle<CR>
 '''
 
 ## }}}
@@ -173,7 +189,7 @@ hook_add = '''
 [[plugins]]
 repo = 'tyru/open-browser.vim'
 on_cmd = ['OpenBrowser', 'OpenBrowserSearch', 'OpenBrowserSmartSearch']
-on_map = '<Plug>(openbrowser-smart-search)'
+on_map = '<Plug>(openbrowser-'
 hook_add = '''
 	" カーソル下のURLや単語をブラウザで開く
 	nmap gx <Plug>(openbrowser-smart-search)
@@ -185,11 +201,11 @@ hook_source = '''
 
 [[plugins]]
 repo = 'tyru/open-browser-github.vim'
+if = 'executable("git")'
 depends = 'open-browser.vim'
 on_cmd = ['OpenGithubFile', 'OpenGithubIssue', 'OpenGithubPullReq']
 hook_add = '''
 	nnoremap go :<C-u>OpenGithubFile<CR>
-	xnoremap go :OpenGithubFile<CR>
 '''
 
 ## }}}
@@ -203,7 +219,7 @@ on_cmd = 'Dein'
 
 [[plugins]] # Git
 repo = 'cohama/agit.vim'
-on_cmd = ['Agit', 'AgitFile']
+on_cmd = 'Agit'
 
 [[plugins]] # Gist
 repo = 'lambdalisue/vim-gista'
