--- a/.config/dein/neovim.toml
+++ b/.config/dein/neovim.toml
@@ -51,17 +51,12 @@ if = 'has("python3")'
 depends = 'context_filetype.vim'
 on_event = 'InsertEnter'
 hook_add = '''
-	" 補完の表示オプション? TODO: 後で調べる
-	set completeopt+=noinsert
-	set completeopt+=noselect
-
+	" <TAB>: completion.
+	imap <silent><expr> <TAB> pumvisible() ? "\<C-n>" : <SID>check_back_space() ? "\<TAB>" : deoplete#mappings#manual_complete()
 	function! s:check_back_space() abort
 		let col = col('.') - 1
 		return !col || getline('.')[col - 1]  =~ '\s'
-	endfunction
-
-	" <TAB>: completion.
-	imap <silent><expr> <TAB> pumvisible() ? "\<C-n>" : <SID>check_back_space() ? "\<TAB>" : deoplete#mappings#manual_complete()
+	endfunction<Paste>
 
 	" <S-TAB>: completion back.
 	inoremap <expr><S-TAB>  pumvisible() ? "\<C-p>" : "\<C-h>"
