--- a/.config/dein/lang.toml
+++ b/.config/dein/lang.toml
@@ -28,30 +28,37 @@ repo  = 'cespare/vim-toml'
 [[plugins]] # zsh - zplug
 repo = 'zplug/vim-zplug'
 
-
 # Web系 {{{
-
-[[plugins]] # amber
-repo = 'burner/amber.vim'
-
-[[plugins]] # CoffeeScript
-repo = 'kchmck/vim-coffee-script'
-
-[[plugins]] # css3
-repo = 'hail2u/vim-css3-syntax'
-
-[[plugins]] # Haml
-repo  = 'tpope/vim-haml'
+# HTML {{{
 
 [[plugins]] # Html5
 repo  = 'othree/html5.vim'
 
+[[plugins]] # Haml
+repo  = 'tpope/vim-haml'
+
+[[plugins]] # amber
+repo = 'burner/amber.vim'
+
+# }}}
+# CSS {{{
+
+[[plugins]] # css3
+repo = 'hail2u/vim-css3-syntax'
+
+# }}}
+# JavaScript {{{
+
 [[plugins]] # JavaScript
 repo = 'jelera/vim-javascript-syntax'
+
+[[plugins]] # CoffeeScript
+repo = 'kchmck/vim-coffee-script'
 
 [[plugins]] # TypeScript
 repo = 'leafgarland/typescript-vim'
 
+# }}}
 # }}}
 # Vim {{{
 
