--- a/.config/dein/lang.toml
+++ b/.config/dein/lang.toml
@@ -10,6 +10,9 @@ hook_source = '''
 	let g:go_fmt_command = 'goimports'
 '''
 
+[[plugins]] # Lua
+repo = 'tbastos/vim-lua'
+
 [[plugins]] # Markdown (GitHub Flavored Markdown)
 repo = 'rhysd/vim-gfm-syntax'
 
