:rocket: battery 変更

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -40,7 +40,7 @@ set-option -g status-left "tmux:#P | #(tmux show-options -g prefix) | #[fg=white
 
 # 右側表示
 set-option -g status-right-length 90
-set-option -g status-right "#[fg=white]Battery:#[default] #(battery -m -r) | CPU: #{cpu_icon} #{cpu_percentage} | %m/%d(%a) %H:%M"
+set-option -g status-right "#[fg=white]Battery:#[default] #(battery -t) | CPU: #{cpu_icon} #{cpu_percentage} | %m/%d(%a) %H:%M"
 
 # }}}
 # Keybindings {{{
