--- a/.config/dein/neovim.toml
+++ b/.config/dein/neovim.toml
@@ -1,48 +1,3 @@
-# Denite {{{
-
-[[plugins]]
-repo = 'Shougo/denite.nvim'
-if = 'has("python3")'
-on_cmd = 'Denite'
-hook_post_source = '''
-	" file_rec
-	if executable('pt')
-		call denite#custom#var('file_rec', 'command', ['pt', '--follow', '--nocolor', '--nogroup', '--hidden', '-g', ''])
-	elseif executable('ag')
-		" https://git.io/vPEZA
-		call denite#custom#var('file_rec', 'command', ['ag', '--follow', '--nocolor', '--nogroup', '-g', ''])
-	elseif executable('rg')
-		" Note: It is slower than ag
-		" https://git.io/vPEZj
-		call denite#custom#var('file_rec', 'command', ['rg', '--files'])
-	endif
-
-	" grep
-	if executable('rg')
-		" https://git.io/vPEZP
-		call denite#custom#var('grep', 'command', ['rg'])
-		call denite#custom#var('grep', 'recursive_opts', [])
-		call denite#custom#var('grep', 'final_opts', [])
-		call denite#custom#var('grep', 'separator', ['--'])
-		call denite#custom#var('grep', 'default_opts', ['--vimgrep', '--no-heading'])
-	elseif executable('pt')
-		call denite#custom#var('grep', 'command', ['pt', '--nogroup', '--nocolor', '--smart-case', '--hidden'])
-		call denite#custom#var('grep', 'default_opts', [])
-		call denite#custom#var('grep', 'recursive_opts', [])
-	endif
-'''
-
-[[plugins]]
-repo = 'Shougo/neomru.vim'
-depends = 'denite.nvim'
-on_path = '.*'
-
-[[plugins]]
-repo = 'Shougo/neoyank.vim'
-depends = 'denite.nvim'
-on_event = 'TextYankPost'
-
-# }}}
 # 補完 {{{
 
 [[plugins]]
@@ -78,12 +33,11 @@ repo = 'Shougo/neosnippet'
 depends = ['neosnippet-snippets', 'context_filetype.vim', 'deoplete.nvim']
 on_event = 'InsertCharPre'
 on_ft = 'snippet'
-hook_add = '''
+hook_source = '''
 	imap <C-k> <Plug>(neosnippet_expand_or_jump)
 	smap <C-k> <Plug>(neosnippet_expand_or_jump)
 	xmap <C-k> <Plug>(neosnippet_expand_target)
-'''
-hook_source = '''
+
 	let g:neosnippet#snippets_directory = dein#get('neosnippet-snippets').path . '/neosnippets'
 '''
 
@@ -112,5 +66,61 @@ on_ft = 'vim'
 [[plugins]] # Zsh
 repo = 'zchee/deoplete-zsh'
 depends = 'deoplete.nvim'
+
+# }}}
+# Denite {{{
+
+[[plugins]]
+repo = 'Shougo/denite.nvim'
+if = 'has("python3")'
+on_cmd = 'Denite'
+hook_post_source = '''
+	" file_rec
+	if executable('pt')
+		call denite#custom#var('file_rec', 'command', ['pt', '--follow', '--nocolor', '--nogroup', '--hidden', '-g', ''])
+	elseif executable('ag')
+		" https://git.io/vPEZA
+		call denite#custom#var('file_rec', 'command', ['ag', '--follow', '--nocolor', '--nogroup', '-g', ''])
+	elseif executable('rg')
+		" Note: It is slower than ag
+		" https://git.io/vPEZj
+		call denite#custom#var('file_rec', 'command', ['rg', '--files'])
+	endif
+
+	" grep
+	if executable('rg')
+		" https://git.io/vPEZP
+		call denite#custom#var('grep', 'command', ['rg'])
+		call denite#custom#var('grep', 'recursive_opts', [])
+		call denite#custom#var('grep', 'final_opts', [])
+		call denite#custom#var('grep', 'separator', ['--'])
+		call denite#custom#var('grep', 'default_opts', ['--vimgrep', '--no-heading'])
+	elseif executable('pt')
+		call denite#custom#var('grep', 'command', ['pt', '--nogroup', '--nocolor', '--smart-case', '--hidden'])
+		call denite#custom#var('grep', 'default_opts', [])
+		call denite#custom#var('grep', 'recursive_opts', [])
+	endif
+
+	call denite#custom#source('file_mru', 'matchers', ['matcher_fuzzy', 'matcher_project_files'])
+	call denite#custom#source('file_mru', 'converters', ['converter_relative_word'])
+'''
+
+[[plugins]]
+repo = 'Shougo/neomru.vim'
+depends = 'denite.nvim'
+on_path = '.*'
+
+[[plugins]]
+repo = 'Shougo/neoyank.vim'
+depends = 'denite.nvim'
+on_event = 'TextYankPost'
+
+[[plugins]]
+repo = 'nixprime/cpsm'
+depends = 'denite.nvim'
+build = 'PY3=ON ./install.sh'
+hook_post_source = '''
+	call denite#custom#source('file_rec', 'matchers', ['matcher_cpsm'])
+'''
 
 # }}}
