--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,7 @@
 set -g default-terminal "xterm-256color"
 set -ga terminal-overrides ",xterm-256color:Tc"
 
+# Vi キーバインドに変更
 set-window-option -g mode-keys vi
 
 set-option -s escape-time 1
@@ -36,11 +37,11 @@ set-option -g status-justify centre
 
 # 左側表示
 set-option -g status-left-length 90
-set-option -g status-left "tmux:#P | #(tmux show-options -g prefix) | #[fg=white]#(wifi)#[default]"
+set-option -g status-left "tmux:#P | #(tmux show-options -g prefix) | CPU: #{cpu_icon} #{cpu_percentage}"
 
 # 右側表示
 set-option -g status-right-length 90
-set-option -g status-right "#[fg=white]Battery:#[default] #(battery -t) | CPU: #{cpu_icon} #{cpu_percentage} | %m/%d(%a) %H:%M"
+set-option -g status-right "#[fg=white]#(wifi)#[default] | #(battery -t) | %m/%d(%a) %H:%M"
 
 # }}}
 # Keybindings {{{
