:+1: 保存場所変更

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,109 +1,1 @@
-set -g default-terminal "xterm-256color"
-set -ga terminal-overrides ",xterm-256color:Tc"
-
-# Vi キーバインドに変更
-set-window-option -g mode-keys vi
-
-set-option -s escape-time 1
-
-# Keep the window's name fixed
-set-option -g allow-rename off
-
-# コンソールの表示名設定
-set-option -g set-titles on
-set-option -g set-titles-string "[tmux] #T @ #H"
-
-# マウス操作を有効にする
-set-option -g mouse on
-
-# ペイン・ウィンドウ {{{
-
-# ウィンドウ履歴の最大行数
-set-option -g history-limit 10000
-
-# ウィンドウとペインの番号を1から開始する（デフォルト0）
-set-option -g base-index 1
-set-window-option -g pane-base-index 1
-
-# }}}
-# ステータスバー {{{
-
-# ステータスバーを上部に表示する
-set-option -g status-position top
-# リフレッシュの間隔を設定する
-set-option -g status-interval 1
-# ウィンドウリストの位置を中央寄せ
-set-option -g status-justify centre
-
-# 左側表示
-set-option -g status-left-length 90
-set-option -g status-left "tmux:#P | #(tmux show-options -g prefix) | CPU: #{cpu_icon} #{cpu_percentage}"
-
-# 右側表示
-set-option -g status-right-length 90
-set-option -g status-right "#[fg=white]#(wifi)#[default] | #(battery -t) | %m/%d(%a) %H:%M"
-
-# }}}
-# Keybindings {{{
-
-# Prefixキーを変更
-unbind-key C-b
-set-option -g prefix C-t
-bind-key C-t send-prefix
-
-# コピーモード
-# Prefix+v でコピーモード開始
-bind-key v copy-mode \; display "Copy mode!"
-bind-key -t vi-copy v begin-selection
-
-# Prefix+Enter/y でコピー
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
-bind-key -t vi-copy y     copy-pipe "reattach-to-user-namespace pbcopy"
-
-# Prefix+p でペースト
-# クリップボードにも保存されているので Cmd-v でもペースト可能
-bind-key p paste-buffer
-
-# スクロールアップするとコピーモードに入る
-bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
-# 最後までスクロールダウンするとコピーモードを抜ける
-bind -n WheelDownPane select-pane -t= \; send-keys -M
-
-# vimのキーバインドでペインを移動する
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-
-# vimのキーバインドでペインをリサイズする
-bind -r H resize-pane -L 5
-bind -r J resize-pane -D 5
-bind -r K resize-pane -U 5
-bind -r L resize-pane -R 5
-
-#設定ファイルをリロードする
-bind r source-file ~/.tmux.conf \; display "Reloaded!"
-
-# Prefix + Ctrl-h,h,h,h,...と連打できる
-bind-key -r C-h select-window -t :-
-# Prefix + Ctrl-h/l でウィンドウ切り替え
-bind-key -r C-l select-window -t :+
-
-# - でペインを横分割する
-bind - split-window -v
-# | でペインを縦分割する
-bind | split-window -h
-
-# }}}
-# Tmux Plugin Manager {{{
-set-environment -g TMUX_PLUGIN_MANAGER_PATH "$XDG_CACHE_HOME/tmux/"
-set -g @plugin 'tmux-plugins/tpm'
-
-set -g @plugin 'seebi/tmux-colors-solarized'
-set -g @plugin 'tmux-plugins/tmux-cpu'
-
-# Plugin Seting
-set -g @colors-solarized '256'
-
-run '~/.cache/tmux/tpm/tpm'
-# }}}
+.config/tmux/config.conf
