--- a/.config/dein/neovim.toml
+++ b/.config/dein/neovim.toml
@@ -6,6 +6,10 @@ if = 'has("python3")'
 depends = 'context_filetype.vim'
 on_event = 'InsertEnter'
 hook_source = '''
+	let g:deoplete#enable_at_startup = 1
+	let g:deoplete#enable_ignore_case = 1
+	let g:deoplete#enable_smart_case = 1
+
 	" <TAB>: completion.
 	imap <silent><expr> <TAB> pumvisible() ? "\<C-n>" : <SID>check_back_space() ? "\<TAB>" : deoplete#mappings#manual_complete()
 	function! s:check_back_space() abort
@@ -15,12 +19,15 @@ hook_source = '''
 
 	" <S-TAB>: completion back.
 	inoremap <expr><S-TAB>  pumvisible() ? "\<C-p>" : "\<C-h>"
-
-	let g:deoplete#enable_at_startup = 1
-	let g:deoplete#enable_ignore_case = 1
-	let g:deoplete#enable_smart_case = 1
 '''
-hook_post_source = 'call deoplete#enable()'
+
+[[plugins]]
+repo = 'wellle/tmux-complete.vim'
+if = 'executable("tmux")'
+depends = 'deoplete.nvim'
+hook_source = '''
+	let g:tmuxcomplete#trigger = ''
+'''
 
 [[plugins]] # Docker
 repo = 'zchee/deoplete-docker'
@@ -28,6 +35,7 @@ depends = 'deoplete.nvim'
 
 [[plugins]] # Golang
 repo = 'zchee/deoplete-go'
+if = 'executable("go")'
 depends = 'deoplete.nvim'
 on_ft = 'go'
 build = 'make'
@@ -53,13 +61,18 @@ repo = 'Shougo/neosnippet-snippets'
 
 [[plugins]]
 repo = 'Shougo/neosnippet'
-depends = ['neosnippet-snippets', 'context_filetype.vim', 'deoplete.nvim']
+depends = ['neosnippet-snippets', 'context_filetype.vim']
 on_event = 'InsertCharPre'
 on_ft = 'snippet'
 hook_source = '''
 	imap <C-k> <Plug>(neosnippet_expand_or_jump)
 	smap <C-k> <Plug>(neosnippet_expand_or_jump)
 	xmap <C-k> <Plug>(neosnippet_expand_target)
+
+	" TODO: 後で調べる
+	let g:neosnippet#enable_snipmate_compatibility = 1
+	let g:neosnippet#enable_complete_done = 1
+	let g:neosnippet#expand_word_boundary = 1
 
 	let g:neosnippet#snippets_directory = dein#get('neosnippet-snippets').path . '/neosnippets'
 '''
