--- a/.config/dein/plugins.toml
+++ b/.config/dein/plugins.toml
@@ -77,6 +77,18 @@ depends = 'lightline.vim'
 
 ## }}}
 # }}}
+# operator {{{
+
+[[plugins]]
+repo = 'kana/vim-operator-user'
+
+# }}}
+# text objects {{{
+
+[[plugins]]
+repo = 'kana/vim-textobj-user'
+
+# }}}
 # 機能拡張 {{{
 
 [[plugins]] # j/k による移動を早くする
@@ -213,7 +225,8 @@ hook_add = '''
 # Command {{{
 
 [[plugins]] # dein.vim command
-repo = 'haya14busa/dein-command.vim'
+# repo = 'haya14busa/dein-command.vim'
+repo = '39e/dein-command.vim'
 depends = 'dein.vim'
 on_cmd = 'Dein'
 
@@ -241,10 +254,26 @@ hook_source = '''
 # }}}
 # Colors {{{
 
+[[plugins]] # Molokai
+repo = 'tomasr/molokai'
+
+[[plugins]] # Oceanic Next
+repo = 'mhartington/oceanic-next'
+
+[[plugins]] # One Dark
+repo = 'joshdick/onedark.vim'
+
 [[plugins]] # hybrid
 repo = 'w0ng/vim-hybrid'
 
+[[plugins]] # solarized
+repo = 'altercation/vim-colors-solarized'
+
+# }}}
+# Test {{{
+
 [[plugins]]
-repo = 'joshdick/onedark.vim'
+repo = 'Shougo/neoinclude.vim'
+depends = 'deoplete.nvim'
 
 # }}}
