--- a/.config/dein/neovim.toml
+++ b/.config/dein/neovim.toml
@@ -15,7 +15,7 @@ hook_source = '''
 	function! s:check_back_space() abort
 		let col = col('.') - 1
 		return !col || getline('.')[col - 1]  =~ '\s'
-	endfunction<Paste>
+	endfunction
 
 	" <S-TAB>: completion back.
 	inoremap <expr><S-TAB>  pumvisible() ? "\<C-p>" : "\<C-h>"
