--- a/.config/tmux/config.conf
+++ b/.config/tmux/config.conf
@@ -41,7 +41,7 @@ set-option -g status-left "tmux:#P | #(tmux show-options -g prefix) | CPU: #{cpu
 
 # 右側表示
 set-option -g status-right-length 90
-set-option -g status-right "#[fg=white]#(wifi)#[default] | #(battery -t) | %m/%d(%a) %H:%M"
+set-option -g status-right "#[fg=white]#(wifi)#[default] | #(battery --tmux) | %m/%d(%a) %H:%M"
 
 # }}}
 # Keybindings {{{
