--- a/.config/dein/mac.toml
+++ b/.config/dein/mac.toml
@@ -1,4 +1,4 @@
-[[plugins]] # Swift
+[[plugins]] # Deoplete - Swift
 repo = 'mitsuse/autocomplete-swift'
 if = 'executable("sourcekitten")'
 depends = 'deoplete.nvim'
