--- a/.config/dein/neovim.toml
+++ b/.config/dein/neovim.toml
@@ -22,6 +22,7 @@ hook_source = '''
 '''
 
 [[plugins]]
+# TODO: とりあえず入れただけだか何か調べる
 repo = 'Shougo/neoinclude.vim'
 depends = 'deoplete.nvim'
 
@@ -58,7 +59,7 @@ on_ft = 'vim'
 repo = 'zchee/deoplete-zsh'
 depends = 'deoplete.nvim'
 
-# neosnippet {{{
+# Neo Snippet
 
 [[plugins]]
 repo = 'Shougo/neosnippet-snippets'
@@ -79,7 +80,6 @@ hook_source = '''
 	let g:neosnippet#snippets_directory = dein#get('neosnippet-snippets').path . '/neosnippets'
 '''
 
-# }}}
 # }}}
 # Denite {{{
 
