いろいろ修正

--- a/.config/dein/mac.toml
+++ b/.config/dein/mac.toml
@@ -1,4 +1,5 @@
 [[plugins]] # Deoplete - Swift
 repo = 'mitsuse/autocomplete-swift'
 if = 'executable("sourcekitten")'
-depends = 'deoplete.nvim'
+depends = 'deoplete'
+on_ft = 'swift'
