--- a/.config/dein/neovim.toml
+++ b/.config/dein/neovim.toml
@@ -69,7 +69,7 @@ on_source = 'neosnippet'
 
 [[plugins]]
 repo = 'Shougo/neosnippet'
-depends = ['neosnippet-snippets', 'context_filetype.vim', 'deoplete.nvim']
+depends = ['neosnippet-snippets', 'context_filetype', 'deoplete.nvim']
 on_event = 'InsertCharPre'
 on_ft = 'snippet'
 hook_source = '''
