--- a/.config/dein/plugins.toml
+++ b/.config/dein/plugins.toml
@@ -49,9 +49,7 @@ hook_post_source = 'call AutoSave()'
 
 [[plugins]] # 行番号表示
 repo = 'jeffkreeftmeijer/vim-numbertoggle'
-hook_add = '''
-	let g:NumberToggleTrigger="<F2>"
-'''
+hook_add = 'let g:NumberToggleTrigger="<F2>"'
 
 [[plugins]] # 対応括弧をハイライト
 repo = 'itchyny/vim-parenmatch'
@@ -60,10 +58,7 @@ hook_add = 'let g:loaded_matchparen = 1'
 [[plugins]] # git で管理してるファイルの変更を表示
 repo = 'airblade/vim-gitgutter'
 on_path = '.*'
-hook_add = '''
-	" キーマップを無効にする
-	let g:gitgutter_map_keys = 0
-'''
+hook_add = 'let g:gitgutter_map_keys = 0'
 
 # Status line
 
@@ -126,10 +121,7 @@ on_map = '<Plug>(easymotion-'
 [[plugins]] # 選択範囲を記号やタグで囲んだり外したりできる
 repo = 'tpope/vim-surround'
 on_path = '.*'
-hook_add = '''
-	" キーマップを無効にする
-	let g:surround_no_mappings = 1
-'''
+hook_add = 'let g:surround_no_mappings = 1'
 
 [[plugins]] # EditorConfig
 repo = 'editorconfig/editorconfig-vim'
@@ -154,6 +146,10 @@ hook_source = '''
 	\	}
 	\}
 '''
+
+[[plugins]] # Japanese doc
+repo = 'vim-jp/vimdoc-ja'
+hook_add = 'set helplang=ja,en'
 
 # NERD Tree
 
@@ -184,9 +180,7 @@ deoplete = 'nerdtree'
 [[plugins]]
 repo = 'jistr/vim-nerdtree-tabs'
 deoplete = 'nerdtree'
-hook_add = '''
-	nmap tf <Plug>NERDTreeTabsToggle<CR>
-'''
+hook_add = 'nmap tf <Plug>NERDTreeTabsToggle<CR>'
 
 # Open Browser
 
@@ -199,18 +193,14 @@ hook_add = '''
 	nmap go <Plug>(openbrowser-smart-search)
 	vmap go <Plug>(openbrowser-smart-search)
 '''
-hook_source = '''
-	let g:openbrowser_menu_lang = 'ja'
-'''
+hook_source = 'let g:openbrowser_menu_lang = "ja"'
 
 [[plugins]]
 repo = 'tyru/open-browser-github.vim'
 if = 'executable("git")'
 depends = 'open-browser'
 on_cmd = ['OpenGithubFile', 'OpenGithubIssue', 'OpenGithubPullReq']
-hook_add = '''
-	nnoremap gx :<C-u>OpenGithubFile<CR>
-'''
+hook_add = 'nnoremap gx :<C-u>OpenGithubFile<CR>'
 
 # Command
 
@@ -236,23 +226,9 @@ on_ft = 'markdown'
 repo = 'yasuharu519/vim-codic'
 if = 'exists("$CODIC_ACCESS_TOKEN")'
 on_cmd = 'VimCodic'
-hook_source = '''
-	let g:vim_codic_access_token = $CODIC_ACCESS_TOKEN
-'''
+hook_source = 'let g:vim_codic_access_token = $CODIC_ACCESS_TOKEN'
 
 # Colors
 
-[[plugins]] # Molokai
-repo = 'tomasr/molokai'
-
-[[plugins]] # Oceanic Next
-repo = 'mhartington/oceanic-next'
-
-[[plugins]] # One Dark
-repo = 'joshdick/onedark.vim'
-
 [[plugins]] # hybrid
 repo = 'w0ng/vim-hybrid'
-
-[[plugins]] # solarized
-repo = 'altercation/vim-colors-solarized'
