--- a/.config/dein/neovim.toml
+++ b/.config/dein/neovim.toml
@@ -57,11 +57,6 @@ on_ft = 'zsh'
 # Denite {{{
 
 [[plugins]]
-repo = 'nixprime/cpsm'
-if = 'has("python3")'
-build = 'PY3=ON ./install.sh'
-
-[[plugins]]
 repo = 'Shougo/denite.nvim'
 if = 'has("python3")'
 on_cmd = 'Denite'
@@ -71,9 +66,6 @@ hook_post_source = '''
 	call denite#custom#source('file_mru', 'converters', ['converter_relative_word'])
 
 	" file_rec
-	if dein#get('cpsm').sourced
-		call denite#custom#source('file_rec', 'matchers', ['matcher_cpsm'])
-	endif
 	if executable('rg')
 		call denite#custom#var('file_rec', 'command', ['rg', '--files', '--hidden', '--glob', '!.git'])
 	elseif executable('pt')
@@ -99,6 +91,15 @@ hook_post_source = '''
 
 	" Change default prompt
 	call denite#custom#option('default', 'prompt', '>')
+'''
+
+[[plugins]]
+repo = 'nixprime/cpsm'
+if = 'has("python3")'
+build = 'PY3=ON ./install.sh'
+on_source = 'denite'
+hook_post_source = '''
+	call denite#custom#source('file_rec', 'matchers', ['matcher_cpsm'])
 '''
 
 # }}}
