:+1: Enterで補完を選択する

--- a/.config/dein/neovim.toml
+++ b/.config/dein/neovim.toml
@@ -30,6 +30,12 @@ hook_source = '''
 	" <S-TAB>: completion back.
 	inoremap <expr><S-TAB>  pumvisible() ? "\<C-p>" : "\<C-h>"
 
+	" <CR>: close popup and save indent.
+	inoremap <silent> <CR> <C-r>=<SID>my_cr_function()<CR>
+	function! s:my_cr_function() abort
+	  return deoplete#close_popup() . "\<CR>"
+	endfunction
+
 	let g:deoplete#enable_at_startup = 1
 	let g:deoplete#enable_ignore_case = 1
 	let g:deoplete#enable_smart_case = 1
