--- a/.config/dein/neovim.toml
+++ b/.config/dein/neovim.toml
@@ -39,6 +39,9 @@ hook_source = '''
 	let g:deoplete#enable_at_startup = 1
 	let g:deoplete#enable_ignore_case = 1
 	let g:deoplete#enable_smart_case = 1
+
+	" 補完するとき '(' をつけない
+	call deoplete#custom#set('_', 'converters', ['converter_remove_paren'])
 '''
 
 [[plugins]]
